<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ius.smartlab.trash.SeePastDataActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/see_past_data_title"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/see_past_data_title"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_selector1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/view"
        android:layout_below="@+id/see_past_data_title"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/real1"
        android:layout_below="@+id/view"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/thermometer"
            android:layout_alignParentLeft="true"
            android:id="@+id/imageView4" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="28"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView4"
            android:layout_toEndOf="@+id/imageView4" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/correct"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/real2"
        android:layout_below="@+id/real1"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/people"
            android:layout_alignParentLeft="true"
            android:id="@+id/imageView3" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="10 persons"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/plus"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/real3"
        android:layout_below="@+id/real2"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/bulb_icon"
            android:layout_alignParentLeft="true"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="2 hours"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/minus"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/real4"
        android:layout_below="@+id/real3"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="60dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/correct"
            android:layout_alignParentLeft="true"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:text="@string/expected"
            android:gravity="center"
            android:paddingLeft="15dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/plus"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:id="@+id/imageView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:text="@string/above_expected"
            android:layout_toRightOf="@+id/imageView"
            android:gravity="center"
            android:paddingLeft="20dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:src="@drawable/minus"
            android:layout_alignParentRight="true"
            android:id="@+id/imageView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:text="@string/below_expected"
            android:gravity="center"
            android:paddingLeft="220dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_current_status"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/real4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_selector1"
        android:text="@string/btn_current_status"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>
















